🧩 cours 1, module 1 complété

--- a/modules/00-introduction/01-quest-ce-que-python.ipynb
+++ b/modules/00-introduction/01-quest-ce-que-python.ipynb
@@ -1,1 +1,191 @@
- 
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:rgb(27, 40, 54); padding: 20px; border-radius: 10px; margin-bottom: 30px;\">\n",
+    "    <h1 style=\"color: white; font-family: 'Segoe UI', Arial, sans-serif; font-size: 2.8em; text-align: center; margin: 0;\">\n",
+    "        Initiation à la Programmation Python 🐍\n",
+    "    </h1>\n",
+    "    <p style=\"color:rgb(242, 255, 0); font-family: 'Segoe UI', Arial, sans-serif; font-size: 1.2em; text-align: center; margin-top: 10px; font-style: italic;\">\n",
+    "        Module d'introduction au langage Python\n",
+    "    </p>\n",
+    "</div>\n",
+    "\n",
+    "\n",
+    "De nos jours, apprendre à coder avec Python est une compétence **très très recherchée** dans beaucoup de métiers et **pas uniquement pour les Développeurs informatiques** à temps plein. ***Tout le monde peut et doit,*** à mon humble avis, ***l'apprendre quelque soit son domaine ! ✨***\n",
+    "\n",
+    "\n",
+    "<figure style=\"padding: 1em; text-align: center;\">\n",
+    "    <img src=\"../../ressources/images/zams_python3.png\" width=\"600\" height=\"400\" alt=\"Logo Python\">\n",
+    "    <figcaption style=\"font-size: 0.9em; color: #3498db; margin-top: 0.5em;\">\n",
+    "        <i>Image générée par ChatGPT. Spoiler alert: ChatGPT a été codé avec Python 👀! <a href=\"https://openclassrooms.com/fr/courses/7150616-apprenez-la-programmation-orientee-objet-avec-python/7197146-comprenez-la-programmation-orientee-objet\" target=\"_blank\"></a></i>\n",
+    "    </figcaption>\n",
+    "</figure>\n",
+    "\n",
+    "\n",
+    "<div style=\"background-color:rgb(27, 40, 54); padding: 15px; border-radius: 5px; margin-bottom: 30px;\">\n",
+    "    <h2 style=\"color:rgb(255, 255, 255); font-family: 'Segoe UI', Arial, sans-serif; font-size: 1.5em; border-bottom: 2px solid #3498DB; padding-bottom: 5px;\">\n",
+    "        Table des matières 📑\n",
+    "    </h2>\n",
+    "    <ul style=\"font-family: 'Segoe UI', Arial, sans-serif; font-size: 1.1em;\">\n",
+    "        <li><a href=\"#section1\" style=\"color: #3498DB; text-decoration: none;\">1. Définition: C'est quoi Python? </a></li>\n",
+    "        <li><a href=\"#section2\" style=\"color: #3498DB; text-decoration: none;\">2. Pourquoi Python et pourquoi devriez-vous l'apprendre ?</a></li>\n",
+    "    </ul>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div id=\"definition\"></div>\n",
+    "<h2 style=\"color: #3498DB; font-family: 'Segoe UI', Arial, sans-serif; font-size: 1.8em; border-bottom: 2px solid #3498DB; padding-bottom: 5px; margin-top: 40px;\">\n",
+    "    1. Définition: C'est quoi Python? 🤔\n",
+    "</h2>\n",
+    "\n",
+    "Créé par **Guido van Rossum** et publié en **1991**, Python est un langage de programmation open-source, orienté objet, de haut niveau et à usage général(c-à-d polyvalent). C'est une définition assez simple mais qui peut, à première vue, sembler lourde et accablante. Examinons chaque caractéristique séparément pour comprendre ce qu'elle signifie clairement:\n",
+    "\n",
+    "<figure style=\"padding: 1em; text-align: center;\">\n",
+    "    <img src=\"https://fastnetmon.com/wp-content/uploads/2016/08/python-logo.png\" width=\"800\" height=\"250\" alt=\"Logo Python\">\n",
+    "    <figcaption style=\"font-size: 0.9em; color: #3498db; margin-top: 0.5em;\">\n",
+    "        <i>Logo officiel du langage Python - <a href=\"https://fastnetmon.com/addons/python-logo/\" target=\"_blank\">Source: Python.org</a></i>\n",
+    "    </figcaption>\n",
+    "</figure>\n",
+    "\n",
+    "\n",
+    "- **Open-source** 🔓  \n",
+    "Il est gratuit et accessible à tous pour d'autres améliorations, comme l'ajout de fonctionnalités utiles, la correction de bogues, l'ajout de bibliothèques etc...\n",
+    "\n",
+    "<figure style=\"padding: 1em; text-align: center;\">\n",
+    "    <img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Open_Source_Initiative.svg/685px-Open_Source_Initiative.svg.png\" width=\"200\" height=\"200\" alt=\"Logo Python\">\n",
+    "    <figcaption style=\"font-size: 0.9em; color: #3498db; margin-top: 0.5em;\">\n",
+    "        <i>Logo of the Open Source Initiative - <a href=\"https://en.m.wikipedia.org/wiki/File:Open_Source_Initiative.svg\" target=\"_blank\">Source: Wikipedia</a></i>\n",
+    "    </figcaption>\n",
+    "</figure>\n",
+    "\n",
+    "\n",
+    "- **Orienté objet** 🧩  \n",
+    "Il est basé non pas sur des fonctions mais sur des objets avec des attributs et des méthodes définis ( Nous verrons par la suite la notion d'orienté objet en profondeur).\n",
+    "\n",
+    "<figure style=\"padding: 1em; text-align: center;\">\n",
+    "    <img src=\"https://user.oc-static.com/upload/2021/04/20/16189359091538_P1C2-1.png\" width=\"700\" height=\"400\" alt=\"Logo Python\">\n",
+    "    <figcaption style=\"font-size: 0.9em; color: #3498db; margin-top: 0.5em;\">\n",
+    "        <i>Voici deux beaux gâteaux ! - <a href=\"https://openclassrooms.com/fr/courses/7150616-apprenez-la-programmation-orientee-objet-avec-python/7197146-comprenez-la-programmation-orientee-objet\" target=\"_blank\">Source: OpenClassrooms</a></i>\n",
+    "    </figcaption>\n",
+    "</figure>\n",
+    "\n",
+    "\n",
+    "- **Haut niveau** 📝  \n",
+    "Il est convivial et facilemment compris par les Humains. En revanche, certains langages comme l'Assembleur sont dits de bas niveau car étant proches de la \"langue maternelle\" d'un ordinateur (le binaire), ce qui les rend plus difficiles à comprendre pour nous.\n",
+    "\n",
+    "<figure style=\"padding: 1em; text-align: center;\">\n",
+    "    <img src=\"https://dyc3ylug23b1.cloudfront.net/prod/d89b74eac664dbffce3214da9c3b9b75-image.png\" width=\"400\" height=\"500\" alt=\"Logo Python\">\n",
+    "    <figcaption style=\"font-size: 0.9em; color: #3498db; margin-top: 0.5em;\">\n",
+    "        <i>High Level & Low Level Languages - <a href=\"https://www.helpteaching.com/lessons/1285/high-level-low-level-languages\" target=\"_blank\">Source: HelpTeaching.com</a></i>\n",
+    "    </figcaption>\n",
+    "</figure>\n",
+    "\n",
+    "\n",
+    "- **Polyvalent** 🔄  \n",
+    "Il peut être utilisé pour créer n'importe quel type de programme. Il a une variété d'applications allant du Développement Web à l'Intelligence Artificielle.\n",
+    "\n",
+    "<figure style=\"padding: 1em; text-align: center;\">\n",
+    "    <img src=\"https://miro.medium.com/v2/resize:fit:1400/0*Vr_X_BgMpLPmDjO_.jpg\" width=\"500\" height=\"300\" alt=\"Logo Python\">\n",
+    "    <figcaption style=\"font-size: 0.9em; color: #3498db; margin-top: 0.5em;\">\n",
+    "        <i>Python est le leader incontesté en matière de science des données, d’automatisation et d’intelligence artificielle. - <a href=\"https://medium.com/@talktorahul.b/why-python-is-still-unbeatable-a-versatile-language-for-the-modern-era-f574d476e83e\" target=\"_blank\">Source: Medium</a></i>\n",
+    "    </figcaption>\n",
+    "</figure>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **2. Pourquoi Python et pourquoi devriez-vous l'apprendre ? 🌟**\n",
+    "\n",
+    "Python est l'un des langages de programmation **les plus populaires au monde** utilisé par des grandes organisations comme **Microsoft**, la **NASA**, **Google** ou encore **Meta**. C'est l'un des langages de programmation les plus puissants et paradoxalement, l'un des plus simples à apprendre car sa syntaxe est proche de l'Anglais courant. Grace à ses nombreuses bibliothèques, il est utilisé entre autres pour:\n",
+    "\n",
+    "\n",
+    "<figure style=\"padding: 1em; text-align: center;\">\n",
+    "    <img src=\"https://f.hellowork.com/blogdumoderateur/2025/01/classement-langages-programmation-janvier-2025-tiobe.jpg\" width=\"800\" height=\"500\" alt=\"Classement des langages de programmation\">\n",
+    "    <figcaption style=\"font-size: 0.9em; color:rgb(71, 129, 255); margin-top: 0.5em;\">\n",
+    "        <i>TIOBE a élu Python langage de programmation de l'année 2024, durant laquelle il a gagné près de 10 points de popularité. <a href=\"https://www.tiobe.com/tiobe-index/\" target=\"_blank\">Source: TIOBE Software</a></i>\n",
+    "    </figcaption>\n",
+    "</figure>\n",
+    "\n",
+    "\n",
+    "- **Le Calcul Scientifique et Numérique** 🧪  \n",
+    "L'écosystème Python offre de nombreux outils et bibliothèques qui aident les scientifiques et les chercheurs. Par exemple *SciPy* et *Pandas* sont des bibliothèques pour les mathématiques, les sciences, l'ingénierie, l'analyse et la modélisation des données.\n",
+    "\n",
+    "<figure style=\"padding: 1em; text-align: center;\">\n",
+    "    <img src=\"https://miro.medium.com/v2/resize:fit:1100/format:webp/0*h-yuUdS04PpgH3oP.jpg\" width=\"600\" height=\"400\" alt=\"Python pour le calcul scientifique\">\n",
+    "    <figcaption style=\"font-size: 0.9em; color: #3498db; margin-top: 0.5em;\">\n",
+    "        <i>Bibliothèques Python utilisées dans le calcul scientifique et l'analyse de données - <a href=\"https://medium.com/towards-data-science/data-science-with-python-intro-to-data-visualization-and-matplotlib-5f799b7c6d82\" target=\"_blank\">Source: Medium/Towards Data Science</a></i>\n",
+    "    </figcaption>\n",
+    "</figure>\n",
+    "\n",
+    "- **Le Développement Web** 🌐  \n",
+    "Certes HTML et JavaScript sont les principaux langages utilisés pour construire le front-end d'une application web, mais des frameworks basés sur Python tels que *Django*, *Pyramid*, *Web2Py* et *Flask* sont utilisés pour gérer le back-end et les fonctionnalités côté serveur des sites. Des plateformes géantes comme **Google** et **YouTube** dépendent largement de Python pour leur infrastructure.\n",
+    "\n",
+    "<figure style=\"padding: 1em; text-align: center;\">\n",
+    "    <img src=\"https://miro.medium.com/v2/resize:fit:1100/format:webp/0*74y4AW2sirTyKYq9.jpg\" width=\"600\" height=\"400\" alt=\"Python pour le développement web\">\n",
+    "    <figcaption style=\"font-size: 0.9em; color: #27ae60; margin-top: 0.5em;\">\n",
+    "        <i>Frameworks Python populaires pour le développement web (Django, Flask, FastAPI) - <a href=\"https://www.djangoproject.com/\" target=\"_blank\">Source: Django Project</a></i>\n",
+    "    </figcaption>\n",
+    "</figure>\n",
+    "\n",
+    "- **Le Big Data et l'Intelligence Artificielle** 🧠  \n",
+    "L'étendue et la puissance de Python, ainsi que sa stabilité et sa sécurité, en font le langage par excellence pour faire fonctionner les systèmes d'Intelligence Artificielle et de Machine Learning. Des bibliothèques importantes comme *Scikit-Learn*, *TensorFlow*, *PyTorch*, *Keras* sont utilisés pour construire divers modèles de Machine Learning et de réseaux de neurones artificiels de pointe (Deep Learning).\n",
+    "\n",
+    "<figure style=\"padding: 1em; text-align: center;\">\n",
+    "    <img src=\"https://miro.medium.com/v2/resize:fit:1100/format:webp/0*WQrQiprHvkCSRi-U.png\" width=\"600\" height=\"400\" alt=\"Python pour l'IA et le Big Data\">\n",
+    "    <figcaption style=\"font-size: 0.9em; color: #3498db; margin-top: 0.5em;\">\n",
+    "        <i>Écosystème Python pour l'intelligence artificielle et l'apprentissage automatique - <a href=\"https://www.tensorflow.org/\" target=\"_blank\">Source: TensorFlow</a></i>\n",
+    "    </figcaption>\n",
+    "</figure>\n",
+    "\n",
+    "- **Le Développement de Jeux Vidéos** 🎮  \n",
+    "Python a été utilisé pour développer des jeux populaires, tels que *Sims 4*, *World of Tanks*, *Eve Online*, *Mount & Blade* pour n'en citer que quelques-uns. Les bibliothèques de développement de jeux 2D et 3D de Python sont *PyGame*, *Pycap*, *Construct*, *PySoy* et *PyOpenGL*.\n",
+    "\n",
+    "<figure style=\"padding: 1em; text-align: center;\">\n",
+    "    <img src=\"https://www.lemondedupc.fr/assets/uploads/8b4042d1b3525dd887fc75bdc308ba68.png\" width=\"600\" height=\"400\" alt=\"Python pour les jeux vidéo\">\n",
+    "    <figcaption style=\"font-size: 0.9em; color: #27ae60; margin-top: 0.5em;\">\n",
+    "        <i>Pygame est une bibliothèque populaire pour le développement de jeux en Python - <a href=\"https://www.lemondedupc.fr/article/71-pygame-1-9-6-un-module-python-utilise-pour-vos-creation\" target=\"_blank\">Source: lemondedupc.fr</a></i>\n",
+    "    </figcaption>\n",
+    "</figure>\n",
+    "\n",
+    "\n",
+    "Comme je l'ai sus-mentionné c'est un langage **polyvalent** et biensur il y a d'autres utilités et applications comme:\n",
+    "- La robotique 🤖\n",
+    "- La blockchain 🔗\n",
+    "- La cybersécurité 🔒\n",
+    "- L'automatisation des taches ⚙️\n",
+    "- Les tests 🧪\n",
+    "- L'écriture de scripts système 💻\n",
+    "- La programmation de systèmes d'exploitation(OS) 🖥️\n",
+    "- Les interfaces graphiques(GUI) 🖌️\n",
+    "- *Et bien plus encore!*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
