🧩 seance 3, git fondamentaux

--- a/modules/00-introduction/01-quest-ce-que-python.ipynb
+++ b/modules/00-introduction/01-quest-ce-que-python.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "<div style=\"background-color:rgb(27, 40, 54); padding: 20px; border-radius: 10px; margin-bottom: 30px;\">\n",
     "    <h1 style=\"color: white; font-family: 'Segoe UI', Arial, sans-serif; font-size: 2.8em; text-align: center; margin: 0;\">\n",
-    "        Initiation à la Programmation Python 🐍\n",
+    "        Généralités sur le language Python 🐍\n",
     "    </h1>\n",
     "    <p style=\"color:rgb(242, 255, 0); font-family: 'Segoe UI', Arial, sans-serif; font-size: 1.2em; text-align: center; margin-top: 10px; font-style: italic;\">\n",
     "        Module d'introduction au langage Python\n",
@@ -16,7 +16,7 @@
     "</div>\n",
     "\n",
     "\n",
-    "De nos jours, apprendre à coder avec Python est une compétence **très très recherchée** dans beaucoup de métiers et **pas uniquement pour les Informaticiens, les Ingénieurs ou les Scientifiques**.  \n",
+    "De nos jours, savoir coder en Python est une compétence **très très recherchée** dans beaucoup de métiers et **pas uniquement pour les Informaticiens, les Ingénieurs ou les Scientifiques**.  \n",
     "***Tout le monde peut et doit,*** à mon humble avis, ***l'apprendre quelque soit son domaine de travail ou d'étude (les matheux diront quelque soit votre domaine de définition 😉)!***\n",
     "\n",
     "\n",
