🧩 cours 2, chap 3 complété

--- a/modules/01-bases-python/02-structures-conditionnelles.ipynb
+++ b/modules/01-bases-python/02-structures-conditionnelles.ipynb
@@ -625,6 +625,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after 'elif' statement on line 5 (3636645454.py, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[44]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mprint(\"Très bien\")\u001b[39m\n    ^\n\u001b[31mIndentationError\u001b[39m\u001b[31m:\u001b[39m expected an indented block after 'elif' statement on line 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "note = 16\n",
+    "\n",
+    "if note >= 15 and note <= 18:\n",
+    "    print(\"Excellent\")\n",
+    "elif note >= 14 and note < 15:\n",
+    "    print(\"Très bien\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -671,7 +694,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En résumé, les variables booléennes et les structures conditionnelles sont des éléments essentiels de la programmation en Python. En comprenant et en maîtrisant ces concepts, vous pourrez désormais écrire des programmes plus clairs, plus concis et plus robustes. J’espère que cet article vous a fourni une compréhension plus approfondie de ces concepts. N’hésitez pas à pratiquer ces concepts sur votre machine pour renforcer votre compréhension. Deux remarques pour terminer:\n",
+    "En résumé, les variables booléennes et les structures conditionnelles sont des éléments essentiels de la programmation en Python. En comprenant et en maîtrisant ces concepts, vous pourrez désormais écrire des programmes plus clairs, plus concis et plus robustes. J’espère que ce chapitre vous a fourni une compréhension plus approfondie de ces concepts. N’hésitez pas à pratiquer ces concepts sur votre machine pour renforcer votre compréhension. Deux remarques pour terminer:\n",
     "\n",
     "- Ne pas oublier que Python est sensible à la casse: par exemple si vous utilisez true ou TRUE à la place de True, le programme vous renverra des erreurs.\n",
     "- Respectez toujours l’indentation (avec la touche tabulation — tab — ou en mettant 4 espaces) après un if ou un else.\n",
