--- a/modules/01-bases-python/03-structures-iteratives.ipynb
+++ b/modules/01-bases-python/03-structures-iteratives.ipynb
@@ -1217,6 +1217,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* \n",
+      "* * \n",
+      "* * * \n",
+      "* * * * \n",
+      "* * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 6):\n",
+    "    print(\"* \" * i)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
